IF(OCTOON_BUILD_PLATFORM_EMSCRIPTEN)
	ADD_SUBDIRECTORY(iGLU-1.0.0)
	SET_TARGET_ATTRIBUTE(iGLU "contrib")
ELSE()
	ADD_SUBDIRECTORY(glew)
	ADD_SUBDIRECTORY(glfw)
	SET_TARGET_ATTRIBUTE(glew "contrib")
	SET_TARGET_ATTRIBUTE(glfw "contrib")
ENDIF()

ADD_SUBDIRECTORY(zlib)
ADD_SUBDIRECTORY(imgui)
ADD_SUBDIRECTORY(DirectX)
ADD_SUBDIRECTORY(HLSLCrossCompiler)
ADD_SUBDIRECTORY(unzip)
ADD_SUBDIRECTORY(zipper)
ADD_SUBDIRECTORY(gles)
ADD_SUBDIRECTORY(openal-soft)
ADD_SUBDIRECTORY(PhysX)
ADD_SUBDIRECTORY(Baikal)

SET_TARGET_ATTRIBUTE(zlib "contrib")
SET_TARGET_ATTRIBUTE(unzip "contrib")
SET_TARGET_ATTRIBUTE(zipper "contrib")
SET_TARGET_ATTRIBUTE(imgui "contrib")
SET_TARGET_ATTRIBUTE(libHLSLcc "contrib")
SET_TARGET_ATTRIBUTE(OpenAL "contrib")