IF(OCTOON_BUILD_PLATFORM_EMSCRIPTEN)
	ADD_SUBDIRECTORY(iGLU-1.0.0)
	SET_TARGET_ATTRIBUTE(iGLU "contrib")
ENDIF()

ADD_SUBDIRECTORY(imgui)
ADD_SUBDIRECTORY(HLSLcc)
ADD_SUBDIRECTORY(HLSLCrossCompiler)
ADD_SUBDIRECTORY(unzip)
ADD_SUBDIRECTORY(zipper)
ADD_SUBDIRECTORY(RadeonRays)
ADD_SUBDIRECTORY(PhysX)

SET_TARGET_ATTRIBUTE(unzip "contrib")
SET_TARGET_ATTRIBUTE(zipper "contrib")
SET_TARGET_ATTRIBUTE(imgui "contrib")
SET_TARGET_ATTRIBUTE(hlslcc "contrib")
SET_TARGET_ATTRIBUTE(libHLSLcc "contrib")
SET_TARGET_ATTRIBUTE(CLW "contrib/RadeonRays")
SET_TARGET_ATTRIBUTE(clw_kernel_cache_h "contrib/RadeonRays")
SET_TARGET_ATTRIBUTE(Calc "contrib/RadeonRays")
SET_TARGET_ATTRIBUTE(RadeonRays "contrib/RadeonRays")
SET_TARGET_ATTRIBUTE(RadeonRaysKernelCache "contrib/RadeonRays")