# contrib folders
INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/zlib)
INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/openal-soft)

# octoon folder
INCLUDE_DIRECTORIES(${OCTOON_PATH_INCLUDE})

# lib folder for link
LINK_DIRECTORIES(${OCTOON_LIBRARY_OUTPUT_PATH})

OPTION(OCTOON_FEATURE_IO_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_ANIMATION_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_BASE_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_INPUT_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_TIMER_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_MODEL_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_HAL_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_SOUND_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_UI_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_VIDEO_ENABLE "On for enable off for disable" ON)

# runtime libraries
ADD_SUBDIRECTORY(octoon-math)
ADD_SUBDIRECTORY(octoon-runtime)
ADD_SUBDIRECTORY(octoon-image)
ADD_SUBDIRECTORY(octoon-audio)
ADD_SUBDIRECTORY(octoon-physics)

IF(OCTOON_FEATURE_ANIMATION_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_ANIMATION_ENABLE)
	ADD_SUBDIRECTORY(octoon-animation)
ENDIF()

IF(OCTOON_FEATURE_IO_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_IO_ENABLE)
	ADD_SUBDIRECTORY(octoon-io)
ENDIF()

IF(OCTOON_FEATURE_BASE_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_BASE_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_INPUT_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_INPUT_ENABLE)
	ADD_SUBDIRECTORY(octoon-input)
ENDIF()

IF(OCTOON_FEATURE_TIMER_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_TIMER_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_MODEL_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_MODEL_ENABLE)
	ADD_SUBDIRECTORY(octoon-model)
ENDIF()

IF(OCTOON_FEATURE_HAL_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_HAL_ENABLE)
	ADD_SUBDIRECTORY(octoon-hal)
ENDIF()

IF(OCTOON_FEATURE_VIDEO_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_VIDEO_ENABLE)
	ADD_SUBDIRECTORY(octoon-video)
ENDIF()

IF(OCTOON_FEATURE_UI_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_UI_ENABLE)
	ADD_SUBDIRECTORY(octoon-ui)
ENDIF()

# framework
ADD_SUBDIRECTORY(octoon)
ADD_SUBDIRECTORY(octoon-c)