SET(LIB_NAME octoon-core)

# feature options for link
OPTION(OCTOON_FEATURE_IO_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_ANIMATION_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_BASE_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_INPUT_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_TIMER_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_MODEL_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_HAL_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_AUDIO_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_PHYSICS_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_UI_ENABLE "On for enable off for disable" OFF)
OPTION(OCTOON_FEATURE_VIDEO_ENABLE "On for enable off for disable" ON)
OPTION(OCTOON_FEATURE_PHYSICS_ENABLE "On for enable off for disable" ON)

IF(OCTOON_FEATURE_BASE_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_BASE_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_IO_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_IO_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_INPUT_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_INPUT_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_TIMER_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_TIMER_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_MODEL_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_MODEL_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_HAL_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_HAL_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_VIDEO_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_VIDEO_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_UI_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_UI_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_AUDIO_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_AUDIO_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_PHYSICS_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_PHYSICS_ENABLE)
ENDIF()

IF(OCTOON_FEATURE_ANIMATION_ENABLE)
	ADD_DEFINITIONS(-DOCTOON_FEATURE_ANIMATION_ENABLE)
ENDIF()

ADD_SUBDIRECTORY(octoon-core)
ADD_SUBDIRECTORY(octoon)
ADD_SUBDIRECTORY(octoon-c)