INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/zipper)

INCLUDE_DIRECTORIES(${OCTOON_PATH_ITNCLUDE})

LINK_DIRECTORIES(${OCTOON_LIBRARY_OUTPUT_PATH})

SET(LIB_NAME tests)
SET(LIB_OUTNAME octoon-${LIB_NAME})

SET(SOURCE_PATH ${OCTOON_PATH_TESTS})

SET(TESTS_SOURCES
    ${SOURCE_PATH}/LiongPlus/DateTime.cpp
    ${SOURCE_PATH}/LiongPlus/Testing/UnitTest.cpp
    ${SOURCE_PATH}/LiongPlus/Testing/Logger.cpp

    ${SOURCE_PATH}/octoon-io.cpp

    ${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${TESTS_SOURCES})

ADD_EXECUTABLE(${LIB_OUTNAME} ${TESTS_SOURCES})

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-io)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE libZipper)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE zlib)

# Copy test environment.
file(COPY ${OCTOON_PATH_TESTS}/testenv DESTINATION ${CMAKE_BINARY_DIR})

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "tests")
