project(ImGuizmo C)

SET(LIB_NAME ImGuizmo)

INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/imgui)

FILE(GLOB_RECURSE HEADER_LIST *.h*)
FILE(GLOB_RECURSE SOURCE_LIST *.c*)

SOURCE_GROUP("ImGuizmo" FILES ${HEADER_LIST})
SOURCE_GROUP("ImGuizmo" FILES ${SOURCE_LIST})

ADD_LIBRARY(${LIB_NAME} STATIC ${HEADER_LIST} ${SOURCE_LIST})