PROJECT(PhysX)

SET(PHYSX_PATH ${PROJECT_SOURCE_DIR} CACHE STRING "Adds a path to Physx" FORCE)
SET(PHYSX_PATH_INCLUDE ${PHYSX_PATH}/PhysX_3.4/Include CACHE STRING "Adds a path to Physx header" FORCE)
SET(PHYSX_PATH_SOURCE ${PHYSX_PATH}/PhysX_3.4/Source CACHE STRING "Adds a path to Physx source" FORCE)
SET(PHYSX_PATH_SHARED ${PHYSX_PATH}/PxShared CACHE STRING "Adds a path to Physx header" FORCE)
SET(PHYSX_PATH_EXTERNALS ${PHYSX_PATH}/Externals CACHE STRING "Adds a path to Physx source" FORCE)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPX_NVTX=1")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPX_DEBUG=1")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPX_CHECKED=1")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPX_FOUNDATION_DLL=1")

SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_DEBUG} -DPX_FOUNDATION_DLL=0")
SET(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_DEBUG} -DPX_FOUNDATION_DLL=0")
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_DEBUG} -DPX_FOUNDATION_DLL=0")

ADD_SUBDIRECTORY(PxShared)
ADD_SUBDIRECTORY(PhysX_3.4)